Fix issue with sending joiner applications, and make toast messages more readable

--- a/Web/wwwroot/css/site.css
+++ b/Web/wwwroot/css/site.css
@@ -119,7 +119,7 @@ ul.bulleted li {
 }
 
 #toast-container > div {
-    opacity: 0.7;
+    opacity: 0.8;
 }
 
 .toast-top-left {
